Make sure loader is visible

--- a/src/Components/Loader.css
+++ b/src/Components/Loader.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 2.5rem;
   height: 2.5rem;
-  margin: 50vh auto;
+  margin: 25vh auto;
 }
 
 .DoubleBounce1, .DoubleBounce2 {
